# pv_growatt_data_downloader

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
doc/: how_to_export_growatt_data.pptx
doc/r_data_parser/: extract_monthly_report_data.R
src/: .env.template  app.py  constants.py  db.py  main.py  raw.py  schema.py  webportal.py
